# hardware-video-encoder

./: CMakeLists.txt  README.md  hve.c
examples/: hve_encode_raw_h264.c
